# prediction_system_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: manual_scenarios.md
ml_service/: Dockerfile  docker-compose-dev.yaml  pyproject.toml
ml_service/app/: main.py
ml_service/app/api/: healthcheck.py  prediction.py  router.py
ml_service/app/ml_interface/: convertor.py  estimator.py  model_registry.py  prediction_service.py
ml_service/app/ml_interface/models/KAS/binary/: kas_binary_lda.pkl  kas_binary_neural_net_lda.keras  kas_binary_preprocessor.pkl
ml_service/app/ml_interface/models/KAS/multilabel/: kas_multilabel_forest_sbs.pkl  kas_multilabel_preprocessor.pkl  kas_multilabel_sbs.pkl
ml_service/app/ml_interface/models/KEE_classic/binary/: kee_classic_binary_lda.pkl  kee_classic_binary_neural_net_lda.keras  kee_classic_binary_preprocessor.pkl
ml_service/app/ml_interface/models/KEE_classic/multilabel/: kee_classic_multi_preprocessor.pkl  kee_classic_multilabel_neural_net_pca.keras  kee_classic_multilabel_pca.pkl
ml_service/app/ml_interface/models/KEE_evers/binary/: kee_evers_binary_neural_net_pca.keras  kee_evers_binary_pca.pkl  kee_evers_binary_preprocessor.pkl
ml_service/app/ml_interface/models/KEE_evers/multilabel/: kee_evers_multilabel_neural_net.keras  kee_evers_multilabel_preprocessor.pkl
ml_service/app/ml_interface/models/KEE_glom/binary/: kee_glom_binary_forest_sbs.pkl  kee_glom_binary_preprocessor.pkl
ml_service/app/pydantic_models/: binary_classification.py  medical_card.py  multi_label_classification.py  response_models.py
ml_service/tests/: test_converter.py  test_models.py  test_prediction_service.py  test_registry.py
prediction_system_backend/: manage.py
prediction_system_backend/cabinet/: admin.py  apps.py  dataclasses.py  forms.py  models.py  serializer.py  urls.py  utils.py  views.py
prediction_system_backend/common_utils/: constants.py  mixins.py  validators.py
prediction_system_backend/ml_service/: admin.py  apps.py  constants.py  dataclasses.py  exceptions.py  models.py  services.py  urls.py  views.py
prediction_system_backend/prediction_system_backend/: .env.example  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
sql_dump/: dump.sql
(+53 files in other folders)
